maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:6: error: not found: value estFaceMure
    if (estFaceMure() == true){
        ^WallFollowerMaze:8: error: not found: value estFaceMure
      if (estFaceMure() == false){
          ^WallFollowerMaze:11: error: not found: value estFaceMure
        while (estFaceMure() == false){
               ^