maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  
  while (estSurBiscuit == false){
    gauche()
    if (estFaceMure() == true){
      droite()
      if (estFaceMure() == false){
        avance()
        gauche()
        while (estFaceMure() == false){
          avance()
          gauche()
        droite()
        }
      } else{
        droite()
      }
    }
  }
  prendBiscuit()
}